[metadata]
name = TP_MPAR
author = Brebion Matthieu, Faucheux Jérôme
author_email = jerome.faucheux@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = Un court exemple de projet
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.10
install_requires =
    matplotlib
    numpy
    networkx
    antlr4-python3-runtime==4.7.2
